# vacancy-collector

./: LICENSE  README.md  pyproject.toml
src/: collectors.py
