[tool.poetry]
name = "vacancy-collector"
version = "0.1.0"
description = ""
authors = ["Kirill Netreba <knete-87@mail.ru>"]
readme = "README.md"
packages = [{include = "vacancy_collector"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
